--- a/cross_validation.Rmd
+++ b/cross_validation.Rmd
@@ -11,16 +11,25 @@ Although hypothesis tests provide a way to compare nested linear models, in many
 This is the second module in the [Linear Models](topic_iteration.html) topic.
 
 ```{r, include = FALSE,message=FALSE,warning=FALSE}
+library(tidyverse)
+
 knitr::opts_chunk$set(
-  collapse = TRUE,
+	echo = TRUE,
+	warning = FALSE,
   fig.width = 6,
   fig.asp = .6,
   out.width = "90%"
 )
 
-library(tidyverse)
+theme_set(theme_minimal() + theme(legend.position = "bottom"))
 
-theme_set(theme_bw() + theme(legend.position = "bottom"))
+options(
+  ggplot2.continuous.colour = "viridis",
+  ggplot2.continuous.fill = "viridis"
+)
+
+scale_colour_discrete = scale_colour_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
 ```
 
 ## Overview {.tabset .tabset-pills}
@@ -48,7 +57,7 @@ Implement cross validation to assess the predictive value of a model using tools
 
 <div class="vid_container">
   <iframe 
-    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    src="https://www.youtube.com/embed/nOIp6J8Uas4"
     frameborder="0" allowfullscreen class="video">
   </iframe>
 </div>
@@ -82,7 +91,7 @@ nonlin_df =
 
 nonlin_df %>% 
   ggplot(aes(x = x, y = y)) + 
-  geom_point() + theme_bw()
+  geom_point()
 ```
 
 I'll split this data into training and test sets (using `anti_join`!!), and replot showing the split. Our goal will be to use the training data (in black) to build candidate models, and then see how those models predict in the testing data (in red).
@@ -174,12 +183,14 @@ I now have many training and testing datasets, and I'd like to fit my candidate 
 ```{r}
 cv_df = 
   cv_df %>% 
-  mutate(linear_mod  = map(train, ~lm(y ~ x, data = .x)),
-         smooth_mod  = map(train, ~mgcv::gam(y ~ s(x), data = .x)),
-         wiggly_mod  = map(train, ~gam(y ~ s(x, k = 30), sp = 10e-6, data = .x))) %>% 
-  mutate(rmse_linear = map2_dbl(linear_mod, test, ~rmse(model = .x, data = .y)),
-         rmse_smooth = map2_dbl(smooth_mod, test, ~rmse(model = .x, data = .y)),
-         rmse_wiggly = map2_dbl(wiggly_mod, test, ~rmse(model = .x, data = .y)))
+  mutate(
+    linear_mod  = map(train, ~lm(y ~ x, data = .x)),
+    smooth_mod  = map(train, ~mgcv::gam(y ~ s(x), data = .x)),
+    wiggly_mod  = map(train, ~gam(y ~ s(x, k = 30), sp = 10e-6, data = .x))) %>% 
+  mutate(
+    rmse_linear = map2_dbl(linear_mod, test, ~rmse(model = .x, data = .y)),
+    rmse_smooth = map2_dbl(smooth_mod, test, ~rmse(model = .x, data = .y)),
+    rmse_wiggly = map2_dbl(wiggly_mod, test, ~rmse(model = .x, data = .y)))
 ```
 
 I'm mostly focused on RMSE as a way to compare these models, and the plot below shows the distribution of RMSE values for each candidate model. 
@@ -224,7 +235,7 @@ child_growth =
 The code chunk below fits each of the candidate models to the full dataset. The piecewise linear model is nested in the linear model and could be assessed using statistical significance, but the smooth model is not nested in anything else. (Also, comparing a piecewise model with a changepoint at 7 to a piecewise model with a changepoint at 8 would be a non-nested comparison...)
 
 ```{r}
-linear_mod    = lm(armc ~ weight, data = child_growth)
+linear_mod = lm(armc ~ weight, data = child_growth)
 pwl_mod    = lm(armc ~ weight + weight_cp, data = child_growth)
 smooth_mod = gam(armc ~ s(weight), data = child_growth)
 ```
@@ -256,12 +267,14 @@ Next I'll use `mutate` + `map` & `map2` to fit models to training data and obtai
 ```{r}
 cv_df = 
   cv_df %>% 
-  mutate(linear_mod  = map(train, ~lm(armc ~ weight, data = .x)),
-         pwl_mod     = map(train, ~lm(armc ~ weight + weight_cp, data = .x)),
-         smooth_mod  = map(train, ~gam(armc ~ s(weight), data = as_tibble(.x)))) %>% 
-  mutate(rmse_linear = map2_dbl(linear_mod, test, ~rmse(model = .x, data = .y)),
-         rmse_pwl    = map2_dbl(pwl_mod, test, ~rmse(model = .x, data = .y)),
-         rmse_smooth = map2_dbl(smooth_mod, test, ~rmse(model = .x, data = .y)))
+  mutate(
+    linear_mod  = map(train, ~lm(armc ~ weight, data = .x)),
+    pwl_mod     = map(train, ~lm(armc ~ weight + weight_cp, data = .x)),
+    smooth_mod  = map(train, ~gam(armc ~ s(weight), data = as_tibble(.x)))) %>% 
+  mutate(
+    rmse_linear = map2_dbl(linear_mod, test, ~rmse(model = .x, data = .y)),
+    rmse_pwl    = map2_dbl(pwl_mod, test, ~rmse(model = .x, data = .y)),
+    rmse_smooth = map2_dbl(smooth_mod, test, ~rmse(model = .x, data = .y)))
 ```
 
 Finally, I'll plot the prediction error distribution for each candidate model.
@@ -269,7 +282,7 @@ Finally, I'll plot the prediction error distribution for each candidate model.
 ```{r}
 cv_df %>% 
   select(starts_with("rmse")) %>% 
-pivot_longer(
+  pivot_longer(
     everything(),
     names_to = "model", 
     values_to = "rmse",
