--- a/tidy_text.Rmd
+++ b/tidy_text.Rmd
@@ -6,62 +6,130 @@ output:
     toc_float: true
 ---
 
-This is a bit of a diversion for a public-health-focused course in data science, but it's fun, related to web data, strings, and factors, and emphasizes tools in data wrangling. It's most closely related to content in the [Data Wrangling II](topic_data_wrangling_ii.html) topic, and the slack channel for extra topics is [here](https://p8105fall2019.slack.com/messages/CN01H0GHX).
+This is a bit of a diversion for a public-health-focused course in data science, but it's fun, related to web data, strings, and factors, and emphasizes tools in data wrangling. It's most closely related to content in the [Data Wrangling II](topic_data_wrangling_ii.html) topic.
 
 ```{r, include = FALSE}
+library(tidyverse)
+
 knitr::opts_chunk$set(
-  collapse = TRUE,
+	echo = TRUE,
+	warning = FALSE,
   fig.width = 6,
   fig.asp = .6,
   out.width = "90%"
 )
 
-library(tidyverse)
+theme_set(theme_minimal() + theme(legend.position = "bottom"))
 
-theme_set(theme_bw() + theme(legend.position = "bottom"))
+options(
+  ggplot2.continuous.colour = "viridis",
+  ggplot2.continuous.fill = "viridis"
+)
+
+scale_colour_discrete = scale_colour_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
 ```
 
-## Some slides
+## Overview {.tabset .tabset-pills}
 
-<script async class="speakerdeck-embed" data-id="ee17524f046c49a58cec601fb98bb72d" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
-<div style="margin-bottom:5px"> <strong> <a href="https://speakerdeck.com/jeffgoldsmith/p8105-tidy-text" title="Tidy Text" target="_blank">Tidy Data</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>. </div><br>
+### Learning Objectives
 
+
+### Slide Deck
+
+<div class="vid_container">
+  <iframe 
+    src="https://speakerdeck.com/player/ee17524f046c49a58cec601fb98bb72d" 
+    allowfullscreen 
+    frameborder="0"
+    class="video">
+  </iframe>
+</div>
+
+<div style="margin-bottom:5px"> <strong> <a href="https://speakerdeck.com/jeffgoldsmith/dsi-tidy-data" title="Tidy Data" target="_blank">Tidy Data</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>. </div><br>
+
+***
+
+### Video Lecture
+
+<div class="vid_container">
+  <iframe 
+    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    frameborder="0" allowfullscreen class="video">
+  </iframe>
+</div>
+
+***
 
 ## Example
 
-I'll write code for today's content in a new R Markdown document called `tidy_text.Rmd`, and put it in the extra topics directory / GitHub repo. I'm going to load the usual packages, as well as `tidytext`.
+I'll write code for today's content in a new R Markdown document called `tidy_text.Rmd`, and put it in the extra topics directory / GitHub repo. I'm going to load the `tidyverse` as usual, as well as `tidytext` and `rvest`.
 
 ```{r}
 library(tidyverse)
-library(viridis)
-library(p8105.datasets)
-
 library(tidytext)
+
+library(rvest)
 ```
 
 ### Data
 
-We're going to examine the [NYC Restuarant Inspections](dataset_restaurant_inspections.html) data, which we looked at in [strings and factors](strings_and_factors.html). I'll load this dataset and restrict to variables I'm interested in right now. 
+We're sticking with "Napoleon Dynamite reviews"! First, I'll re-use code from [iteration and listcols](iteration_and_listcols.html) to scrape the 1000 most recent reviews on Amazon (and cache the result).
 
-```{r}
-data("rest_inspec")
+```{r read_napoleon, cache = TRUE}
+read_page_reviews <- function(url) {
+  
+  html = read_html(url)
+  
+  review_titles = 
+    html %>%
+    html_nodes(".a-text-bold span") %>%
+    html_text()
+  
+  review_stars = 
+    html %>%
+    html_nodes("#cm_cr-review_list .review-rating") %>%
+    html_text() %>%
+    str_extract("^\\d") %>%
+    as.numeric()
+  
+  review_text = 
+    html %>%
+    html_nodes(".review-text-content span") %>%
+    html_text() %>% 
+    str_replace_all("\n", "") %>% 
+    str_trim()
+  
+  tibble(
+    title = review_titles,
+    stars = review_stars,
+    text = review_text
+  )
+}
 
-rest_inspec = 
-  rest_inspec %>% 
-  filter(grade %in% c("A", "B", "C")) %>% 
-  mutate(inspection_num = row_number(),
-         boro = str_to_title(boro)) %>% 
-  select(inspection_num, boro, grade, score, critical_flag, dba, cuisine_description, zipcode, violation_description)
+url_base = "https://www.amazon.com/product-reviews/B00005JNBQ/ref=cm_cr_arp_d_viewopt_rvwer?ie=UTF8&reviewerType=avp_only_reviews&sortBy=recent&pageNumber="
+
+dynamite_reviews = 
+  tibble(
+    page = 1:100,
+    urls = str_c(url_base, page)) %>% 
+  mutate(reviews = map(urls, read_page_reviews)) %>% 
+  unnest(reviews) %>%
+  mutate(review_num = row_number()) %>% 
+  relocate(page, review_num)
 ```
+
+The output of the code above is a successfully scraped dataset with `r ncol(dynamite_reviews)` and `r nrow(dynamite_reviews)` rows -- one row for each review. For each review we get the title of that review, the number of stars it received, and text that describers the users feelings about the movie.
+
 
 ### Words and wordcounts
 
-To illustrate tidy text and text analysis, we'll focus on the `violation_description` which is stored as a string. To begin our analysis, we'll un-nest the tokens (i.e. words) in each row; the result is a tidy dataset in which each word is contained within a separate row. 
+To illustrate tidy text and text analysis, we'll focus on the reviews directly, which are stored as strings in `text`. To begin our analysis, we'll un-nest the tokens (i.e. words) in each row; the result is a tidy dataset in which each word is contained within a separate row. 
 
 ```{r}
-inspection_words = 
-  rest_inspec %>% 
-  unnest_tokens(word, violation_description)
+dynamite_words = 
+  dynamite_reviews %>% 
+  unnest_tokens(word, text)
 ```
 
 There are lots of words here that are uninformative. We'll remove "stop words" using `anti_join`; in other settings the words you want to remove might be different.
@@ -69,14 +137,14 @@ There are lots of words here that are uninformative. We'll remove "stop words" u
 ```{r}
 data(stop_words)
 
-inspection_words = 
-  anti_join(inspection_words, stop_words)
+dynamite_words = 
+  anti_join(dynamite_words, stop_words)
 ```
 
 Great! Let's take a look at the most commonly used (informative) words in this dataset.
 
 ```{r}
-inspection_words %>% 
+dynamite_words %>% 
   count(word, sort = TRUE) %>% 
   top_n(10) %>% 
   mutate(word = fct_reorder(word, n)) %>% 
@@ -87,152 +155,7 @@ inspection_words %>%
 
 ### Comparing words across groups
 
-Let’s compare which words are more likely to come from a "C" versus "A" inspection grade. We limit to words that appear at least 5 times and compute the approximate log odds ratio for each word.
-
-```{r}
-word_ratios = 
-  inspection_words %>%
-  filter(grade %in% c("A", "C")) %>% 
-  count(word, grade) %>%
-  group_by(word) %>% 
-  filter(sum(n) >= 5) %>%
-  ungroup() %>%
-  spread(grade, n, fill = 0) %>%
-  mutate(
-    C_odds = (C + 1) / (sum(C) + 1),
-    A_odds = (A + 1) / (sum(A) + 1),
-    log_OR = log(C_odds / A_odds)
-  ) %>%
-  arrange(desc(log_OR)) 
-```
-
-We plot the top 15 most distinct words (that is, words that appear much more frequently in one group than the other) below. 
-
-```{r, fig.asp = .8}
-word_ratios %>%
-  mutate(pos_log_OR = ifelse(log_OR > 0, "C > A", "A > C")) %>% 
-  group_by(pos_log_OR) %>%
-  top_n(15, abs(log_OR)) %>%
-  ungroup() %>%
-  mutate(word = fct_reorder(word, log_OR)) %>%
-  ggplot(aes(word, log_OR, fill = pos_log_OR)) +
-  geom_col() +
-  coord_flip() +
-  ylab("log odds ratio (C/A)") +
-  scale_fill_discrete(name = "")
-```
-
-A lot of these seem pretty reasonable. 
-
-### Sentiment analysis
-
-Finally, let's score the sentiment in each word. We'll use the "bing" (like [Bing Liu](https://www.cs.uic.edu/~liub/FBS/sentiment-analysis.html), not like [bing.com](https://www.bing.com)) sentiment lexicon, which simply categorizes each word as having a positive or negative sentiment. 
-
-```{r}
-bing_sentiments = get_sentiments("bing")
-```
-
-Note this is not perfect for this dataset -- for example, this scores `cold` as `negative` which might not be accurate -- but we'll use it anyway. 
-
-We need to combine this lexicon with our tidy dataset containing words from each inspection. Note that only words that are in the sentiment lexicon will be retained, as the rest of the words are not considered meaningful. We’ll also count the number of positive and negative words in each violation description, and create a score that is the difference between the number of positive words and negative words.
-
-```{r}
-inspection_sentiments = 
-  inspection_words %>% 
-  inner_join(., bing_sentiments) %>% 
-  count(inspection_num, sentiment) %>% 
-  spread(sentiment, n, fill = 0) %>% 
-  mutate(sentiment = positive - negative) %>% 
-  select(inspection_num, sentiment)
-```
-
-We now have sentiment scores for each inspection. We'll combine these with our original dataset, which had inspections in each row rather than words in each row -- the data tidied for text analysis aren't really suitable for our current needs.
-
-```{r}
-inspection_sentiments = 
-  right_join(rest_inspec, inspection_sentiments, 
-             by = "inspection_num")
-```
-
-Finally, let's make a plot showing inspection sentiments and grades. This could be a pretty big plot, so I'll restrict to Manhattan and sample only a few thousand entries. 
-
-```{r}
-set.seed(1)
-
-inspection_sentiments %>% 
-  filter(boro == "Manhattan") %>% 
-  sample_n(5000) %>% 
-  mutate(inspection_num = factor(inspection_num),
-    inspection_num = fct_reorder(inspection_num, sentiment)) %>% 
-  ggplot(aes(x = inspection_num, 
-             y = sentiment, fill = grade, color = grade)) + 
-  geom_bar(stat = "identity") + 
-  theme(axis.title.x = element_blank(),
-        axis.text.x = element_blank(),
-        axis.ticks.x = element_blank()) +
-  scale_fill_viridis(discrete = TRUE) + 
-  scale_color_viridis(discrete = TRUE) 
-```
-
-It's not clear that sentiment is related to grade; this could reflect the very formal language of inspections or the inappropriateness of our lexicon.
-
-### Napoleon
-
-A much more interesting example is the "Napoleon Dynamite reviews", which we'll analyze using the same basic approach as above. First, I'll re-use code from [iteration and listcols](iteration_and_listcols.html) to scrape the 1000 most recent reviews on Amazon (and cache the result).
-
-```{r read_napoleon, cache = TRUE}
-library(rvest)
-
-read_page_reviews = function(url) {
-  
-  h = read_html(url)
-  
-  title = h %>%
-    html_nodes("#cm_cr-review_list .review-title") %>%
-    html_text()
-  
-  stars = h %>%
-    html_nodes("#cm_cr-review_list .review-rating") %>%
-    html_text() %>%
-    str_extract("\\d") %>%
-    as.numeric()
-  
-  text = h %>%
-    html_nodes(".review-data:nth-child(5)") %>%
-    html_text()
-  
-  data_frame(title, stars, text)
-}
-
-url_base = "https://www.amazon.com/product-reviews/B00005JNBQ/ref=cm_cr_arp_d_viewopt_rvwer?ie=UTF8&reviewerType=avp_only_reviews&sortBy=recent&pageNumber="
-
-dynamite_reviews = 
-  tibble(page = 1:100,
-         urls = str_c(url_base, page)) %>% 
-  mutate(reviews = map(urls, read_page_reviews)) %>% 
-  unnest()
-```
-
-The output of the code above is a successfully scraped dataset with `r ncol(dynamite_reviews)` and `r nrow(dynamite_reviews)` rows -- one row for each review. For each review we get the title of that review, the number of stars it received, and text that describers the users feelings about the movie.
-
-Next we'll turn this into a tidy dataset using the text in the reviews and remove stop words.
-
-```{r tidy_napoleon}
-dynamite_reviews = 
-  dynamite_reviews %>%
-  as_tibble() %>%
-  mutate(review_num = row_number())
-
-data(stop_words)
-
-dynamite_words = 
-  dynamite_reviews %>% 
-  unnest_tokens(word, text) %>% 
-  anti_join(stop_words) %>% 
-  arrange(review_num)
-```
-
-The code chunk below produces a table of the most frequently used in one- and five-star reviews.
+The next code chunk below produces a table of the most frequently used in one- and five-star reviews.
 
 ```{r frequent_words}
 dynamite_words %>%
@@ -249,75 +172,114 @@ Word frequency might be misleading because there are
 `r dynamite_reviews %>% filter(stars == 5) %>% count()` 5-star reviews and only 
 `r dynamite_reviews %>% filter(stars == 1) %>% count()` 1-star reviews.  
 
-To look a relative word frequency we plot the (approximate) log odds ratio for word appearance comparing 1-star reviews to 5-star reviews, shown below.
+Let’s compare which words are more likely to come from a 1 versus 5 star ratings. We limit to words that appear at least 5 times and compute the approximate log odds ratio for each word.
 
-```{r logodds_plot}
-word_ratios <- dynamite_words %>%
-    filter(stars %in% c(1, 5)) %>% 
-    count(word, stars) %>%
-    group_by(word) %>% 
-    filter(sum(n) >= 3) %>%
-    ungroup() %>%
-    spread(stars, n, fill = 0) %>%
-    mutate_if(is.numeric, funs((. + 1) / sum(. + 1))) %>%
-    mutate(logratio = log(`5` / `1`)) %>%
-    arrange(desc(logratio)) 
-
-word_ratios %>% 
-  mutate(pos_log_OR = ifelse(logratio > 0, "5 star > 1 star", "1 star > 5 star")) %>%
-  group_by(pos_log_OR) %>%
-  top_n(10, abs(logratio)) %>%
+```{r}
+word_ratios = 
+  dynamite_words %>%
+  filter(stars %in% c(1, 5)) %>% 
+  count(word, stars) %>%
+  group_by(word) %>% 
+  filter(sum(n) >= 5) %>%
   ungroup() %>%
-  mutate(word = fct_reorder(word, logratio)) %>%
-  ggplot(aes(word, logratio, fill = pos_log_OR)) +
+  pivot_wider(
+    names_from = stars, 
+    values_from = n,
+    names_prefix = "stars_",
+    values_fill = 0) %>%
+  mutate(
+    stars_1_odds = (stars_1 + 1) / (sum(stars_1) + 1),
+    stars_5_odds = (stars_5 + 1) / (sum(stars_5) + 1),
+    log_OR = log(stars_5_odds / stars_1_odds)
+  ) %>%
+  arrange(desc(log_OR)) 
+```
+
+Next, let's plot the top 10 most distinctive words (that is, words that appear much more frequently in one group than the other) below. 
+
+```{r, fig.asp = .8}
+word_ratios %>% 
+  mutate(pos_log_OR = ifelse(log_OR > 0, "5 star > 1 star", "1 star > 5 star")) %>%
+  group_by(pos_log_OR) %>%
+  top_n(10, abs(log_OR)) %>%
+  ungroup() %>%
+  mutate(word = fct_reorder(word, log_OR)) %>%
+  ggplot(aes(word, log_OR, fill = pos_log_OR)) +
   geom_col() +
   coord_flip() +
   ylab("log odds ratio (5/1)") +
   scale_fill_discrete(name = "")
 ```
 
-Words like "classic", "laugh", and "love" have high relative frequency in the 5-star reviews and "boring", "worst", and "waste" have high relative frequency in the 1-star reviews. This seems to be a polarizing film.
+Words like "classic", "awesome", and "love" have high relative frequency in the 5-star reviews and "boring", "dumb", and "bad" have high relative frequency in the 1-star reviews. This seems to be a polarizing film.
 
-Finally we conduct a sentiment analysis of the review texts. Below is a plot of the sentiment results, colored by star rating. 
+### Sentiment analysis
 
-```{r sentiment_plot}
-dynamite_word_sentiments <- dynamite_words %>% 
-  inner_join(get_sentiments("bing")) %>% 
-  count(review_num, sentiment) %>% 
-  spread(sentiment, n, fill = 0) %>% 
-  mutate(sentiment = positive - negative) %>% 
-  left_join(dynamite_reviews)
+Finally, let's score the sentiment in each word. We'll use the "bing" (like [Bing Liu](https://www.cs.uic.edu/~liub/FBS/sentiment-analysis.html), not like [bing.com](https://www.bing.com)) sentiment lexicon, which simply categorizes each word as having a positive or negative sentiment. 
 
-ggplot(dynamite_word_sentiments, 
-       aes(x = reorder(review_num, -sentiment), 
-           y = sentiment, fill = stars, color = stars)) + 
-  geom_bar(stat = "identity") + 
-  theme(axis.title.x=element_blank(),
-        axis.text.x=element_blank(),
-        axis.ticks.x=element_blank()) +
-  scale_fill_viridis(direction = -1) + 
-  scale_color_viridis(direction = -1) 
+```{r}
+bing_sentiments = get_sentiments("bing")
 ```
 
-Sentiment seems to be at least somewhat associated with star rating in that more positive sentiments are more blue-purple (4-5 stars) and more negative sentiments are more green-yellow.
+Note this is might not always be appropriate -- this scores `cold` as `negative` which might not be accurate for e.g. food inspections -- but we'll use it anyway. 
+
+We need to combine this lexicon with our tidy dataset containing words from each inspection. Note that only words that are in the sentiment lexicon will be retained, as the rest of the words are not considered meaningful. We’ll also count the number of positive and negative words in each review, and create a score that is the difference between the number of positive words and negative words.
+
+```{r}
+dynamite_sentiments = 
+  dynamite_words %>% 
+  inner_join(., bing_sentiments) %>% 
+  count(review_num, sentiment) %>% 
+  pivot_wider(
+    names_from = sentiment, 
+    values_from = n, 
+    values_fill = 0) %>% 
+  mutate(review_sentiment = positive - negative) %>% 
+  select(review_num, review_sentiment)
+```
+
+We now have sentiment scores for each inspection. We'll combine these with our original dataset, which had inspections in each row rather than words in each row -- the data tidied for text analysis aren't really suitable for our current needs.
+
+```{r}
+dynamite_sentiments = 
+  right_join(
+    dynamite_reviews, dynamite_sentiments, 
+    by = "review_num")
+```
+
+Finally, let's make a plot showing inspection sentiments and stars.
+
+```{r sentiment_plot}
+dynamite_sentiments %>% 
+  mutate(
+    review_num = factor(review_num),
+    review_num = fct_reorder(review_num, review_sentiment, .desc = TRUE)) %>% 
+  ggplot(aes(x = review_num, y = review_sentiment, fill = stars, color = stars)) + 
+  geom_bar(stat = "identity") + 
+  theme(
+    axis.title.x=element_blank(),
+    axis.text.x=element_blank(),
+    axis.ticks.x=element_blank())
+```
+
+Sentiment seems to be at least somewhat associated with star rating in that more positive sentiments are more yellow-green (4-5 stars) and more negative sentiments are more blue-purple.
 
 Here is the text from the most positive review:
 
 ```{r best_review}
-dynamite_word_sentiments %>%
-  filter(sentiment == max(sentiment)) %>% 
+dynamite_sentiments %>%
+  filter(review_sentiment == max(review_sentiment)) %>% 
   pull(text)
 ```
 
 <img src="images/napoleon_1.gif" style="width:50%; border:5px solid">
 
 
-And here is the text from the most negative 1-star review:
+And here is the text from the most negative (1-star) review:
 
 ```{r worst_review}
-dynamite_word_sentiments %>%
-  filter(sentiment == min(sentiment),
-         stars == 1) %>% 
+dynamite_sentiments %>%
+  filter(review_sentiment == min(review_sentiment), stars == 1) %>% 
   pull(text)
 ```
 
